--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,9 @@ ol, ul {
 .square:focus {
   outline: none;
 }
-
+.square-winner {
+  background: yellow;
+}
 .kbd-navigation .square:focus {
   background: #ddd;
 }
